--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -175,7 +175,7 @@
       <x>30</x>
       <y>110</y>
       <width>431</width>
-      <height>341</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="title">
@@ -188,61 +188,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
-       <width>211</width>
-       <height>29</height>
-      </rect>
-     </property>
-     <layout class="QFormLayout" name="formLayout_5">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Tipo</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="comboBoxTipodeControle">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="currentIndex">
-         <number>0</number>
-        </property>
-        <item>
-         <property name="text">
-          <string>P</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>PI</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>PD</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>PID</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>PI-D</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>190</y>
+       <y>210</y>
        <width>119</width>
        <height>111</height>
       </rect>
@@ -276,8 +222,8 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>190</y>
+       <x>220</x>
+       <y>210</y>
        <width>181</width>
        <height>111</height>
       </rect>
@@ -330,13 +276,13 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>260</x>
-       <y>40</y>
+       <x>262</x>
+       <y>33</y>
        <width>131</width>
-       <height>62</height>
+       <height>131</height>
       </rect>
      </property>
-     <layout class="QFormLayout" name="formLayout">
+     <layout class="QGridLayout" name="gridLayout_4">
       <item row="0" column="0">
        <widget class="QLabel" name="labelTensaoNivel">
         <property name="text">
@@ -380,26 +326,46 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Offset</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="SpinBoxPeriodoOffset">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+        <property name="value">
+         <double>0.000000000000000</double>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>40</y>
-       <width>211</width>
-       <height>62</height>
+       <x>13</x>
+       <y>39</y>
+       <width>201</width>
+       <height>128</height>
       </rect>
      </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <item row="0" column="0">
+     <layout class="QGridLayout" name="gridLayout_5">
+      <item row="1" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Canal</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1" colspan="2">
        <widget class="QSpinBox" name="spinBoxCanal">
         <property name="enabled">
          <bool>false</bool>
@@ -409,14 +375,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Sinal</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1" colspan="2">
        <widget class="QComboBox" name="comboBoxSinal">
         <property name="enabled">
          <bool>false</bool>
@@ -429,15 +395,87 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Tipo</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" colspan="2">
+       <widget class="QComboBox" name="comboBoxTipodeControle">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <item>
+         <property name="text">
+          <string>P</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PI</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PD</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PID</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PI-D</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_10">
+        <property name="text">
+         <string>Ordem</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QComboBox" name="comboBoxSinal_ordem">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="editable">
+         <bool>false</bool>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <item>
+         <property name="text">
+          <string>Primeira</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Segunda</string>
+         </property>
+        </item>
+       </widget>
+      </item>
      </layout>
     </widget>
    </widget>
    <widget class="QCustomPlot" name="customPlot" native="true">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>490</x>
       <y>320</y>
-      <width>631</width>
+      <width>661</width>
       <height>271</height>
      </rect>
     </property>
@@ -449,7 +487,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>631</width>
+       <width>661</width>
        <height>271</height>
       </rect>
      </property>
@@ -467,9 +505,9 @@
    <widget class="QCustomPlot" name="plotS1" native="true">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>490</x>
       <y>80</y>
-      <width>301</width>
+      <width>321</width>
       <height>211</height>
      </rect>
     </property>
@@ -481,7 +519,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>301</width>
+       <width>321</width>
        <height>211</height>
       </rect>
      </property>
@@ -495,17 +533,13 @@
       <enum>QFrame::Raised</enum>
      </property>
     </widget>
-    <zorder>frame_2</zorder>
-    <zorder>frame</zorder>
-    <zorder></zorder>
-    <zorder>frame_3</zorder>
    </widget>
    <widget class="QCustomPlot" name="plotS2" native="true">
     <property name="geometry">
      <rect>
-      <x>850</x>
+      <x>830</x>
       <y>80</y>
-      <width>301</width>
+      <width>321</width>
       <height>211</height>
      </rect>
     </property>
@@ -517,7 +551,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>301</width>
+       <width>321</width>
        <height>211</height>
       </rect>
      </property>
@@ -530,7 +564,6 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <zorder>plotS2</zorder>
     </widget>
    </widget>
    <widget class="QSplitter" name="splitter">
@@ -556,7 +589,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -592,6 +625,7 @@
      </item>
     </layout>
    </widget>
+   <zorder>layoutWidget</zorder>
    <zorder>radioButtonMalhaAberta</zorder>
    <zorder>radioButtonMalhaFechada</zorder>
    <zorder>groupBoxSaida</zorder>
@@ -601,12 +635,6 @@
    <zorder>plotS2</zorder>
    <zorder>splitter</zorder>
    <zorder>customPlot</zorder>
-   <zorder>label_7</zorder>
-   <zorder>label_altura</zorder>
-   <zorder>label_9</zorder>
-   <zorder>frame</zorder>
-   <zorder>frame_3</zorder>
-   <zorder>label_7</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -614,7 +642,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
